ecmascript/parser/tests/test262-error-references/fail/28520880d460c4f9.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/28520880d460c4f9.js:1:15
  |
1 | ({a: b = 0, c = 0});
  |               ^

